--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="content">
         <h1>Bakary Jobe</h1>
         <h2>Front End Developer</h2>
-        <p>Hey there, my name is Bakary Jobe a Gambian and I'm a Front End Developer.I'm still a student studying computer science at MDI.</p>
+        <p>Hey dear, my name is Bakary Jobe a Gambian and I'm a Front End Developer.I'm still a student studying computer science at MDI.</p>
         <p>If you are interested in building Responsive Website like this for your Personal Website and Business or  getting started into Web Development, kindly hit me up on my whatsapp by clicking the whatsapp icon on the bottom rigth of your screen.Thank you. </p>
         <p></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quisquam delectus ab ipsam porro tenetur repellat? Maiores sapiente possimus assumenda nulla. Velit, nobis?</p>
